{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 20,
  "lineage": "df265700-d2f3-2a37-f4a3-f3a2dfad252a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AprilDevopsEC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cc16f7f08c4457",
            "arn": "arn:aws:ec2:eu-west-1:672078395914:instance/i-0a9acb3186a2af5ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9acb3186a2af5ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0bf986c36a32b1c",
            "private_dns": "ip-10-0-1-133.eu-west-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-34-245-206-62.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.206.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f430cf1111727c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e687d35bb1bdd696",
            "tags": {
              "Name": "AprilDevopsEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-068c6122c65e7da52"
            ]
          },
          "dependencies": [
            "module.aws_sg.aws_security_group.AprilDevOpsSG",
            "module.aws_vpc.aws_subnet.AprilDevOpsPubnetA",
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672078395914:internet-gateway/igw-0007c19ee715ba38c",
            "id": "igw-0007c19ee715ba38c",
            "owner_id": "672078395914",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-066171437016bc690"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096df7a43b5696d00",
            "owner_id": "672078395914",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0007c19ee715ba38c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-066171437016bc690"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subA_rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0086bff732d73f7e8",
            "route_table_id": "rtb-096df7a43b5696d00",
            "subnet_id": "subnet-0e687d35bb1bdd696"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.AprilDevOpsPubnetA",
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subB_rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7121ca350abdc35",
            "route_table_id": "rtb-096df7a43b5696d00",
            "subnet_id": "subnet-07d54287623e9982e"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.vpc_igw",
            "module.aws_vpc.aws_route_table.vpc_rt",
            "module.aws_vpc.aws_subnet.AprilDevOpsPubnetB",
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AprilDevOpsSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672078395914:security-group/sg-068c6122c65e7da52",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068c6122c65e7da52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200630111137624900000001",
            "name_prefix": null,
            "owner_id": "672078395914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-066171437016bc690"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AprilDevOpsPubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672078395914:subnet/subnet-0e687d35bb1bdd696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e687d35bb1bdd696",
            "map_public_ip_on_launch": false,
            "owner_id": "672078395914",
            "tags": {
              "Name": "AprilDevOpsPubnetA"
            },
            "vpc_id": "vpc-066171437016bc690"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AprilDevOpsPubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672078395914:subnet/subnet-07d54287623e9982e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07d54287623e9982e",
            "map_public_ip_on_launch": false,
            "owner_id": "672078395914",
            "tags": {
              "Name": "AprilDevOpsPubnetB"
            },
            "vpc_id": "vpc-066171437016bc690"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.AprilDevOpsVPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AprilDevOpsVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672078395914:vpc/vpc-066171437016bc690",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f9d97a9fc05c14b",
            "default_route_table_id": "rtb-07e12f46cc72e4c06",
            "default_security_group_id": "sg-06f07ebd1f8225d35",
            "dhcp_options_id": "dopt-03c4eb65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-066171437016bc690",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e12f46cc72e4c06",
            "owner_id": "672078395914",
            "tags": {
              "Name": "AprilDevOpsVPC"
            }
          }
        }
      ]
    }
  ]
}